--- a/src/test/resources/config/testdata.properties
+++ b/src/test/resources/config/testdata.properties
@@ -1,5 +1,3 @@
 # usually we do not store user credentials or other sensitive data in git, its only for example project
 
-web.url=http://demowebshop.tricentis.com
-user.login=qaguru@qa.guru
-user.password=qaguru@qa.guru1
+web.url=https://www.dataart.com.ua
